--- a/ProjectDiamondShop/Views/Login/LoginPage.cshtml
+++ b/ProjectDiamondShop/Views/Login/LoginPage.cshtml
@@ -87,7 +87,8 @@
         .login-container {
             padding: 20px;
             margin-top: 100px;
-            width: 30%;
+            max-width: 400px;
+            width: 80vw;
             margin-left: auto;
             margin-right: auto;
             display: flex;
