--- a/ProjectDiamondShop/Views/SignUp/SignUpPage.cshtml
+++ b/ProjectDiamondShop/Views/SignUp/SignUpPage.cshtml
@@ -1,5 +1,4 @@
 ﻿<!DOCTYPE html>
-
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <title>The Diamond Shop</title>
@@ -84,7 +83,8 @@
         .signup-container {
             padding: 20px;
             margin-top: 100px;
-            width: 30%;
+            max-width: 400px;
+            width: 80vw;
             margin-left: auto;
             margin-right: auto;
             display: flex;
