Diamonds Page(trang Shop) + filter cho trang tổng (chưa làm phân trang) (chưa làm hiện chi tiết sản phẩm)

--- a/ProjectDiamondShop/Views/Home/HomePage.cshtml
+++ b/ProjectDiamondShop/Views/Home/HomePage.cshtml
@@ -206,6 +206,7 @@
                             <li class="active"><a href="@Url.Action("Index", "Home")">Home</a> </li>
                             <li><a href="@Url.Action("About", "Home")">About</a> </li>
                             <li><a href="@Url.Action("Contact", "Home")">Contact US</a> </li>
+                            <li><a href="@Url.Action("Index", "Diamonds")">Shop</a> </li>
                             <li><a href="#">Blog</a> </li>
                             @if (Session["IsAuthenticated"] != null && (bool)Session["IsAuthenticated"])
                             {
