--- a/ProjectDiamondShop/Views/Home/About.cshtml
+++ b/ProjectDiamondShop/Views/Home/About.cshtml
@@ -213,6 +213,7 @@
                             <li><a href="@Url.Action("Index", "Home")">Home</a> </li>
                             <li class="active"><a href="@Url.Action("About", "Home")">About</a> </li>
                             <li><a href="@Url.Action("Contact", "Home")">Contact US</a> </li>
+                            <li><a href="@Url.Action("Index", "Diamonds")">Shop</a> </li>
                             <li><a href="#">Blog</a> </li>
                             @if (Session["IsAuthenticated"] != null && (bool)Session["IsAuthenticated"])
                             {
